Fixed getParameter null issue

--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20171018</version>
+		</dependency>
 	</dependencies>
 </project>
