Implemented a Fact class to store the triple attributes

--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -33,5 +33,10 @@
 			<artifactId>json</artifactId>
 			<version>20180813</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
 	</dependencies>
 </project>
