--- a/services/Kstream/Dockerfile
+++ b/services/Kstream/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /kstream
 RUN apt-get -y update && apt-get -y install g++
 RUN apt-get -y update && apt-get -y upgrade && apt-get -y install python2.7 python-pip
 RUN pip install -r requirements.txt
+RUN python setup.py build_ext -if
+RUN python setup.py install
 CMD nameko run kstream_service
