--- a/factchecking-service/WebContent/WEB-INF/web.xml
+++ b/factchecking-service/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>WebServer</display-name>
+  <display-name>factchecking-service</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,16 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  
   <servlet>
-  <servlet-name>Servlet</servlet-name>
-  <servlet-class>User_Data_Servlet</servlet-class>
-</servlet>
-
-<!--<servlet-mapping>
-  <servlet-name>Servlet</servlet-name>
-  <url-pattern>/s_p_o</url-pattern>
-</servlet-mapping>-->
+    <servlet-name>Servlet</servlet-name>
+    <servlet-class>User_Data_Servlet</servlet-class>
+  </servlet>
 </web-app>
-
