--- a/services/Simrank/Dockerfile
+++ b/services/Simrank/Dockerfile
@@ -1,10 +1,8 @@
-FROM ubuntu
+FROM enriozuni/docker_ubuntu_python27_gpp
 MAINTAINER Enri Ozuni "enriozuni@hotmail.com"
 RUN mkdir simrank
 COPY . /simrank
 WORKDIR /simrank
-RUN apt-get -y update && apt-get -y install g++
-RUN apt-get -y update && apt-get -y upgrade && apt-get -y install python2.7 python-pip
 RUN pip install -r requirements.txt
 RUN python setup.py build_ext -if
 RUN python setup.py install
