Corrected namespace for FCSystemAdapter

--- a/factchecking-benchmark/Dockerfile
+++ b/factchecking-benchmark/Dockerfile
@@ -4,4 +4,4 @@ ADD target/factchecking-benchmark-1.0.0.jar /system/factchecking-benchmark.jar
 
 WORKDIR /system
 
-CMD java -cp factchecking-benchmark.jar org.hobbit.core.run.ComponentStarter org.hobbit.factchecking.FCSystemAdapter
+CMD java -cp factchecking-benchmark.jar org.hobbit.core.run.ComponentStarter org.dice.benchmark.component.FCSystemAdapter
