--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -44,3 +44,10 @@ services:
                 build: ./Predpath
                 container_name: predpath
                 network_mode: "host"
+         rabbitmq:
+                image: "rabbitmq:management"
+                container_name: rabbitmq
+                restart: always
+                ports:
+                  - "5672:5672"
+                  - "15672:15672"
