--- a/factchecking-service/pom.xml
+++ b/factchecking-service/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+       		<groupId>org.slf4j</groupId>
+       		<artifactId>slf4j-api</artifactId>
+       		<version>1.7.5</version>
+   		</dependency>
 	</dependencies>
 
 </project>
